--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
                                 <h2 class="fw-bold mb-2 text-uppercase"><a href="pages/page2.html">PAGE 2</a></h2>
 
-                                <img src="img/killua.jpg" alt="Chuek-Troste" style="max-width: 50%; align-items: center;">
+                                <img src="img/killua.jpg" alt="Killua" style="max-width: 50%; align-items: center;">
                                 <p class="text-white-50 mb-5">Please enter your email and password!</p>
 
                                 <div class="form-outline form-white mb-4">
